# lib/db/src/schema/index.ts
@@ -1,2 +1,4 @@
 export * from "./auth";
 export * from "./trading";
+export * from "./conversations";
+export * from "./messages";
